[package]
name = "code_advent_2020"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
bits = {git = "https://github.com/gjf2a/bits"}
advent_code_lib = {git = "https://github.com/gjf2a/advent_code_lib"}
smallvec = "1.5.1"