[package]
name = "code_advent_2020"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "^1.0.2"
smallvec = "^1.5.1"
enum-iterator = "^0.6.0"
itertools = "^0.9.0"
num = "^0.3.1"
advent_code_lib = {git = "https://github.com/gjf2a/advent_code_lib"}
bits = {git = "https://github.com/gjf2a/bits"}
histogram = {git = "https://github.com/gjf2a/histogram"}

[profile.release]
overflow-checks = true
